--- a/src/app/modules/newsfeed/activity/activity.component.html
+++ b/src/app/modules/newsfeed/activity/activity.component.html
@@ -1,5 +1,5 @@
 <!-- ojm make this an *mIf -->
-<ng-container *ngIf="true; else v1">
+<ng-container *ngIf="isV2; else v1">
   <m-activityV2
     [entity]="entity$ | async"
     [canDelete]="canDelete"
