--- a/src/app/modules/newsfeed/newsfeed.component.ng.scss
+++ b/src/app/modules/newsfeed/newsfeed.component.ng.scss
@@ -12,6 +12,9 @@
         border: none !important;
       }
     }
+    // ojm look at latest posts (guest mode) ,
+    // .m-newsfeed__inner
+    // padding should be 0
   }
 
   ::ng-deep {
