--- a/src/app/modules/newsfeed/activity-v2/owner-block/owner-block.component.html
+++ b/src/app/modules/newsfeed/activity-v2/owner-block/owner-block.component.html
@@ -49,8 +49,7 @@
       <a
         [routerLink]="service.canonicalUrl$ | async"
         class="m-activityOwnerBlock__permalink"
-      >
-        <m-relativeTimeSpanV2
+        ><m-relativeTimeSpanV2
           class="m-activityOwnerBlockPermalink__text ojmtempRelative"
           *ngIf="!isScheduled() && isFeed; else absoluteDate"
           [entity]="entity"
@@ -58,7 +57,7 @@
         <ng-template #absoluteDate>
           <div class="m-activityOwnerBlockPermalink__text ojmtempAbsolute">
             <i *ngIf="isScheduled()" class="material-icons">schedule</i
-            ><span>{{ toReadableDate(entity.time_created) }} </span>
+            ><span>{{ toReadableDate(entity.time_created) }}</span>
           </div>
         </ng-template>
         <!-- ojm where does this edited tag go? -->
