--- a/src/app/modules/comments/entity-outlet-v2/entity-outlet.component.html
+++ b/src/app/modules/comments/entity-outlet-v2/entity-outlet.component.html
@@ -10,11 +10,11 @@
 </div>
 
 <!-- -------------------- -->
-<!-- TOGGLE (everywhere except feeds) -->
+<!-- TOGGLE (modal only) -->
 <!-- -------------------- -->
 <div
   class="m-commentsEntityOutlet__topBar"
-  *ngIf="count > 0 && !activityService.displayOptions.isFeed"
+  *ngIf="count > 0 && activityService.displayOptions.isModal"
 >
   <div class="m-commentsEntityOutlet__header">
     <span class="m-commentsEntityOutlet__title" (click)="toggleComments()"
