--- a/src/app/modules/newsfeed/activity-v2/minimal-metrics/minimal-metrics.component.ng.scss
+++ b/src/app/modules/newsfeed/activity-v2/minimal-metrics/minimal-metrics.component.ng.scss
@@ -2,6 +2,7 @@
 @import '../activity.component.ng.scss';
 
 :host {
+  padding: 0;
   .m-activity__minimalMetrics {
     font-size: 16px;
     padding: 0 $spacing4 $spacing4;
