--- a/src/app/modules/newsfeed/feeds/subscribed.component.html
+++ b/src/app/modules/newsfeed/feeds/subscribed.component.html
@@ -46,6 +46,7 @@
       ></m-composer>
     </ng-container>
 
+    <!-- ojm  Expression has changed after it was checked. previous: undefined. current:[ obj obj]  -->
     <div class="minds-list" m-hotkeyScroll [anchors]="feedViewChildren">
       <ng-container *ngFor="let preActivity of prepended">
         <m-activity
