--- a/src/app/modules/newsfeed/single/single.component.html
+++ b/src/app/modules/newsfeed/single/single.component.html
@@ -35,7 +35,7 @@
             fixedHeight: fixedHeight,
             showOnlyCommentsInput: false,
             showComments: !fixedHeight,
-            showInteractions: !activityV2Feature,
+            showInteractions: true,
             autoplayVideo: false
           }"
           [slot]="1"
