--- a/src/app/modules/newsfeed/activity-v2/modal/modal.component.html
+++ b/src/app/modules/newsfeed/activity-v2/modal/modal.component.html
@@ -92,34 +92,22 @@
       <!-- -------------------------------------------------- -->
       <div class="m-activityModal__contentContainer">
         <div class="m-activityModal__contentBody">
+          <!-- FLAG -->
+          <m-activityV2__flag
+            class="m-activity__optionalTopRow"
+          ></m-activityV2__flag>
           <!-- OWNER BLOCK -->
           <m-activityV2__ownerBlock>
             <ng-container class="m-activityOwnerBlock__right">
-              <m-activityV2__metrics></m-activityV2__metrics>
-
-              <ng-container *ngIf="entity">
-                <span
-                  *ngIf="entity.pinned"
-                  class="m-activity__flag m-activity__flag--pinned"
-                  data-cy="m-activity__pinnedFlag"
-                >
-                  <span>Pinned</span>
-                </span>
-              </ng-container>
-
+              <m-activityV2__metrics
+                *ngIf="session.getLoggedInUser().guid == entity.ownerObj.guid"
+              ></m-activityV2__metrics>
               <m-activityV2__menu
                 (deleted)="delete()"
                 *ngIf="activityService.isLoggedIn$ | async"
               ></m-activityV2__menu>
             </ng-container>
           </m-activityV2__ownerBlock>
-
-          <!-- TOOLBAR -->
-          <div class="m-activityModal__toolbarWrapper">
-            <m-activityV2__toolbar
-              *ngIf="activityService.displayOptions.showToolbar"
-            ></m-activityV2__toolbar>
-          </div>
           <!-- --------------- -->
           <!-- SCROLLABLE AREA -->
           <!-- --------------- -->
@@ -143,11 +131,18 @@
                 "
               >
               </m-activityV2__content>
-
+              <!-- PERMALINK -->
+              <m-activityV2__permalink></m-activityV2__permalink>
+              <!-- TOOLBAR -->
+              <div class="m-activityModal__toolbarWrapper">
+                <m-activityV2__toolbar
+                  *ngIf="activityService.displayOptions.showToolbar"
+                ></m-activityV2__toolbar>
+              </div>
               <!-- COMMENTS TREE -->
               <div class="m-activityModal__comments" *ngIf="entity.guid">
                 <ng-container *mIfBrowser>
-                  <m-comments__entityOutlet
+                  <m-comments__entityOutletV2
                     *ngIf="activityService.displayOptions.showComments"
                     [entity]="activityService.entity$ | async"
                     [canDelete]="activityService.canDelete$ | async"
@@ -156,7 +151,7 @@
                     [compact]="true"
                     (onHeightChange)="onCommentsHeightChange($event)"
                   >
-                  </m-comments__entityOutlet>
+                  </m-comments__entityOutletV2>
                 </ng-container>
               </div>
             </div>
