--- a/src/app/modules/newsfeed/activity-v2/modal/quote/quote.component.ng.scss
+++ b/src/app/modules/newsfeed/activity-v2/modal/quote/quote.component.ng.scss
@@ -1,5 +1,5 @@
 @import 'defaults.scss';
-@import '../../activity.component.scss';
+@import '../../activity.component.ng.scss';
 
 :host {
   text-align: left;
