--- a/src/app/modules/newsfeed/activity-v2/owner-block/owner-block.component.html
+++ b/src/app/modules/newsfeed/activity-v2/owner-block/owner-block.component.html
@@ -3,15 +3,21 @@
   [ngClass]="{ 'm-activity__ownerBlock--minimalMode': minimalMode }"
 >
   <!-- ---------------------------- -->
-  <!-- MINIMAL MODE ONLY  -->
-  <div class="m-activityOwnerBlock__avatar" *ngIf="minimalMode">
+  <!-- MINIMAL MODE / SIDEBAR BOOSTS ONLY  -->
+  <div
+    class="m-activityOwnerBlock__avatar"
+    *ngIf="minimalMode || isSidebarBoost"
+  >
     <m-hovercard [publisher]="owner" [offset]="[0, 15]">
       <a [routerLink]="['/', username]">
         <img [src]="avatarUrl" class="m-border" />
       </a>
     </m-hovercard>
 
-    <div class="m-activityOwnerBlock__remindIcon--minimalMode">
+    <div
+      *ngIf="minimalMode"
+      class="m-activityOwnerBlock__remindIcon--minimalMode"
+    >
       <i class="material-icons">repeat</i>
     </div>
   </div>
@@ -19,7 +25,7 @@
 
   <div class="m-activityOwnerBlock__body">
     <a class="m-activityOwnerBlock__displayName" [routerLink]="['/', username]">
-      <span [title]="displayName">{{ displayName }}</span>
+      <span [title]="displayName">{{ displayName | truncate: 15 }}</span>
 
       <m-channel--badges
         class="m-channel--badges-activity m-activityOwnerBlockDisplayName__badges"
@@ -36,51 +42,19 @@
         <span [title]="group.name">({{ group.name }})</span>
       </a>
     </ng-container>
-    <ng-container *ngIf="!group">
+    <ng-container *ngIf="!group && !isSidebarBoost">
       <!-- @username -->
       <a [routerLink]="['/', username]" class="m-activityOwnerBlock__username">
         <span [title]="username">@{{ username }}</span>
       </a>
     </ng-container>
 
-    <ng-container>
-      <span class="m-activityOwnerBlock__dot">·</span>
-      <!-- Perma link to post -->
-      <a
-        [routerLink]="service.canonicalUrl$ | async"
-        class="m-activityOwnerBlock__permalink"
-        ><m-relativeTimeSpanV2
-          class="m-activityOwnerBlockPermalink__text ojmtempRelative"
-          *ngIf="!isScheduled() && isFeed; else absoluteDate"
-          [entity]="entity"
-        ></m-relativeTimeSpanV2>
-        <ng-template #absoluteDate>
-          <div class="m-activityOwnerBlockPermalink__text ojmtempAbsolute">
-            <i *ngIf="isScheduled()" class="material-icons">schedule</i
-            ><span>{{ toReadableDate(entity.time_created) }}</span>
-          </div>
-        </ng-template>
-        <!-- ojm where does this edited tag go? -->
-        <!-- <span
-          *ngIf="
-            service.displayOptions.showEditedTag && (service.isEdited$ | async)
-          "
-          class="m-activityOwnerBlockPermalink__text--edited"
-          i18n="@@M__COMMON__EDITED"
-          >Edited</span
-        > -->
-        <div
-          class="m-activityOwnerBlockPermalink__text--visibility"
-          *ngIf="
-            service.displayOptions.showVisibilityState &&
-            (service.isUnlisted$ | async)
-          "
-        >
-          <i class="material-icons unlisted">visibility_off</i>
-          <a i18n="@@OWNER_BLOCK__UNLISTED">Unlisted</a>
-        </div>
-      </a>
-    </ng-container>
+    <span *ngIf="!isSidebarBoost && !isModal" class="m-activityOwnerBlock__dot"
+      >·</span
+    >
+    <m-activityV2__permalink
+      *ngIf="!isModal && !minimalMode"
+    ></m-activityV2__permalink>
   </div>
 
   <div class="m-activityOwnerBlock__right">
@@ -96,25 +70,3 @@
     ></m-activityV2__menu>
   </div>
 </div>
-
-<!-- ojm remove -->
-<!-- <ng-template #boostedTag>
-  <div
-    class="mdl-card__supporting-text is-boosted"
-    *ngIf="service.isBoosted$ | async"
-    [class.is-onchain]="entity.boosted_onchain"
-  >
-    <i class="material-icons">trending_up</i>
-    <a
-      i18n="@@MINDS__CARDS__ACTIVITY__BOOSTED_LABEL"
-      [hidden]="entity.boosted_onchain"
-      >Boosted</a
-    >
-    <a
-      i18n="@@MINDS__CARDS__ACTIVITY__BOOSTED_LABEL_ONCHAIN"
-      [hidden]="!entity.boosted_onchain"
-      [routerLink]="['/token']"
-      >Boosted Onchain</a
-    >
-  </div>
-</ng-template> -->
