--- a/src/app/modules/newsfeed/activity-v2/toolbar/toolbar.component.ng.scss
+++ b/src/app/modules/newsfeed/activity-v2/toolbar/toolbar.component.ng.scss
@@ -6,7 +6,8 @@
     background-color: themed($m-bgColor--primary);
   }
 
-  .m-activityToolbar__actions {
+  .m-activityToolbar__actions,
+  .m-activityToolbar__metrics {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -16,30 +17,25 @@
     width: 100%;
   }
 
-  // ojm remove
-  // .m-activityToolbarMetrics__metric {
-  //   text-align: left;
-  //   padding-right: 20px;
-  //   cursor: pointer;
+  .m-activityToolbarMetrics__metric {
+    text-align: left;
+    padding-right: $spacing5;
+    cursor: pointer;
 
-  //   span {
-  //     font-size: 15px;
-  //   }
-
-  //   span:nth-of-type(1) {
-  //     font-weight: 500;
-  //     padding-right: 5px;
-  //     @include m-theme() {
-  //       color: themed($m-textColor--primary);
-  //     }
-  //   }
-  //   span:nth-of-type(2) {
-  //     font-weight: 400;
-  //     @include m-theme() {
-  //       color: themed($m-textColor--secondary);
-  //     }
-  //   }
-  // }
+    span:nth-of-type(1) {
+      @include body2Bold;
+      padding-right: $spacing1;
+      @include m-theme() {
+        color: themed($m-textColor--primary);
+      }
+    }
+    span:nth-of-type(2) {
+      @include body2Regular;
+      @include m-theme() {
+        color: themed($m-textColor--secondary);
+      }
+    }
+  }
 
   .m-activityToolbar__actions {
     padding-right: $spacing8;
